Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80768

moving, dragging, flicking property documentation is broken

    XMLWordPrintable

Details

    • 5aa19d92036be3056ee7ff2d5d302b52a3e4a394 (qt/qttools/5.14)
    • DaVinci X-mas sprint

    Description

      https://doc.qt.io/qt-5/qml-qtquick-flickable.html

      Clicking on any of these properties' links does nothing, and if you manually search for it on the page, you'll see that something is wrong with the qdoc

      Attachments

        For Gerrit Dashboard: QTBUG-80768
        # Subject Branch Project Status CR V

        Activity

          People

            treinio Topi Reiniƶ
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes